--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ h3 {
     text-align: center;
     margin: auto;
     padding-top: 100px;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/banner2.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://i.postimg.cc/bwx8PQnt/banner2.jpg");
     background-size: cover;
     border-radius: 10px;
     text-align: center;
@@ -404,7 +404,7 @@ h3 {
 .sub-header {
     height: 60vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, .7), rgba(4, 9, 30, .7)), url("images/background.jpg");
+    background-image: linear-gradient(rgba(4, 9, 30, .7), rgba(4, 9, 30, .7)), url("https://i.postimg.cc/VLsHvn2t/background.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
