--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ h3 {
 /*------- sub-header section------ */
 
 .sub-header {
-    height: 400px;
+    height: 60vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, .7), rgba(4, 9, 30, .7)), url("https://i.postimg.cc/VLsHvn2t/background.jpg");
     background-position: center;
@@ -411,6 +411,11 @@ h3 {
     color: white;
 }
 
+@media (orientation:landscape) {
+    .sub-header {
+        height: 80vh;
+    }
+}
 .sub-header h1 {
     margin-top: 100px;
 }
